<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_open_with"
        android:orderInCategory="100"
        android:title="@string/menu_open_with"/>
    
    <item
        android:id="@+id/menu_rename"
        android:orderInCategory="100"
        android:title="@string/menu_rename"/>
    
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="100"
        android:title="@string/menu_delete"/>
    
    <item
        android:id="@+id/menu_copy"
        android:orderInCategory="100"
        android:title="@string/menu_copy"/>
    
    <item 
        android:id="@+id/menu_set_home"
        android:orderInCategory="100"
        android:title="@string/menu_home_dir"/>
    
    <item
        android:id="@+id/menu_move"
        android:orderInCategory="100"
        android:title="@string/menu_move"/>
    
    <item
        android:id="@+id/menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_preferences"/>
    
    <item
        android:id="@+id/menu_create_file"
        android:orderInCategory="100"
        android:title="@string/menu_create_file"/>
    
    <item
        android:id="@+id/menu_create_folder"
        android:orderInCategory="100"
        android:title="@string/menu_create_folder"/>
    
</menu>
