<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item  -->
<!--         android:id="@+id/menu_set_home" -->
<!--         android:orderInCategory="100" -->
<!--         android:title="@string/menu_home_dir"/> -->
    
    <item
        android:id="@+id/menu_smb"
        android:orderInCategory="100"
        android:title="@string/menu_smb"/>
    
    <item
        android:id="@+id/menu_create_file"
        android:orderInCategory="100"
        android:title="@string/menu_create_file"/>
    
    <item
        android:id="@+id/menu_create_folder"
        android:orderInCategory="100"
        android:title="@string/menu_create_folder"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"/>

</menu>
