<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/ic_menu_more" />

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageview_title"
                android:layout_alignTop="@id/imageview_title"
                android:layout_toRightOf="@id/imageview_title"
                android:gravity="center_vertical"
                android:text="@string/openlist_title"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <GridView
            android:id="@+id/gridview_openlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:background="#FFFFFF" />

        <CheckBox
            android:id="@+id/checkbox_default_open"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/checkbox_text"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_dialog_application"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center" >

            <Button
                android:id="@+id/button_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/previous"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_dialog_application_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="56dp"
                android:text="@string/paged_init_text"
                android:textColor="@android:color/primary_text_light"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/next"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>