<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_create_file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/create_file_title"
        android:textColor="#FFFFFFFF"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edittext_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/create_file_title"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/button_set"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:text="@string/set"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>