<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_deletefile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/deletefile_title"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textview_filename_deletefile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/button_set_deletefile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/delete"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_cancel_deletefile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/cancel"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>