<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- <ImageView -->
    <!-- android:id="@+id/imageview_cover" -->
    <!-- android:layout_width="120dp" -->
    <!-- android:layout_height="150dp" -->
    <!-- android:contentDescription="@string/app_name" -->
    <!-- android:visibility="gone" /> -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp" >

            <TextView
                android:id="@+id/textview_label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/file_property_name"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="middle"
                android:hint="@string/hint"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp" >

            <TextView
                android:id="@+id/textview_label_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/file_property_title"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="middle"
                android:hint="@string/hint"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp" >

            <TextView
                android:id="@+id/textview_label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/file_property_date"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="middle"
                android:hint="@string/hint"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp" >

            <TextView
                android:id="@+id/textview_label_file_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/file_property_file_type"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_file_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="middle"
                android:hint="@string/hint"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/text_color_white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>